--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "bun run src/index.ts",
+    "refresh-abis": "bun run scripts/refresh-abis.ts",
     "lint": "bun run --silent",
     "typecheck": "bun run tsc -p tsconfig.json --noEmit"
   },
