--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "bun run src/index.ts",
     "refresh-abis": "bun run scripts/refresh-abis.ts",
     "lint": "bun run tsc -p tsconfig.json --noEmit",
+    "test:e2e": "bun run scripts/e2e.ts",
     "typecheck": "bun run tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
