--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "bun run src/index.ts",
     "refresh-abis": "bun run scripts/refresh-abis.ts",
     "lint": "bun run tsc -p tsconfig.json --noEmit",
-    "test:e2e": "bun run scripts/e2e.ts",
+    "test:e2e": "echo \"Moved to vibefi-e2e repo\" && exit 1",
+    "test:smoke": "bun run scripts/smoke-test.ts",
     "typecheck": "bun run tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
