--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "scripts": {
     "dev": "bun run src/index.ts",
     "refresh-abis": "bun run scripts/refresh-abis.ts",
-    "lint": "bun run tsc -p tsconfig.json --noEmit",
     "test:e2e": "echo \"Moved to vibefi-e2e repo\" && exit 1",
     "test:smoke": "bun run scripts/smoke-test.ts",
     "typecheck": "bun run tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@vibefi/shared": "workspace:*",
     "commander": "^12.1.0",
     "viem": "^2.45.0"
   },
