--- a/config.defaults.json
+++ b/config.defaults.json
@@ -13,6 +13,18 @@
         "proposalRequirements": ""
       }
     },
+    "sepolia": {
+      "rpcUrl": "",
+      "chainId": 11155111,
+      "contracts": {
+        "vfiToken": "0xD11496882E083Ce67653eC655d14487030E548aC",
+        "vfiGovernor": "0x753d33e2E61F249c87e6D33c4e04b39731776297",
+        "vfiTimelock": "0xA1349b43D3f233287762897047980bAb3846E23b",
+        "dappRegistry": "0xFb84B57E757649Dff3870F1381C67c9097D0c67f",
+        "constraintsRegistry": "0x6F88C22Aed57a7175E2655AA5f2b5863A0c0a7b7",
+        "proposalRequirements": "0x641d8C8823e72af936b78026d3bb514Be3f22383"
+      }
+    },
     "devnet": {
       "rpcUrl": "http://127.0.0.1:8545",
       "chainId": 31337,
